ci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projeto-vivo-service
spec:
  selector:
    app: projeto-vivo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
