ci/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projeto-vivo-ingress
spec:
  rules:
    - host: projeto-vivo.com #projeto_vivo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projeto-vivo-service
                port:
                  number: 80
